feat: add for pretty client and server